--- a/templates/review.html
+++ b/templates/review.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <div class="content-section-main-title">
             Add Review for
-            <span style="color: var(--review-color);"><br>"{{ movie }}"</span>
+            <span style="color: var(--review-color);">"{{ movie }}"</span>
         </div>
 
     {% if form.errors %}
