--- a/templates/result.html
+++ b/templates/result.html
@@ -112,11 +112,15 @@
                     <i class="fa fa-star" style="color: #999ba5;"></i>
                     {% endfor %}
                 </div>
+
+                <div class="short-rating">
+                    <i class="fa fa-star"></i>&nbsp;{{ review.rating }}
+                </div>
             </div>
 
             <div id="review-{{ review.id }}" class="review-description">
-                {{ review.review_description|linebreaksbr|truncatewords:150 }}
-                {% if review.review_description|length > 700 %}
+                {{ review.review_description|linebreaksbr|truncatewords:70 }}
+                {% if review.review_description|length > 350 %}
                 <a style="text-decoration: none; color: #007bff; cursor: pointer;" onclick="readMore({{ review.id }}, '{{ review.review_description|linebreaksbr|escapejs }}')">read more</a>
                 {% endif %}
             </div>
