--- a/static/css/review.css
+++ b/static/css/review.css
@@ -1,9 +1,13 @@
+#AddReview {
+  display: none;
+}
+
 .content-section-main-title {
   margin-bottom: 14px;
   font-size: 22px;
 }
 
-.rating {
+.form-group .rating {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -13,15 +17,15 @@
   position: relative;
 }
 
-.rating-0 {
+.form-group .rating-0 {
   filter: grayscale(100%);
 }
 
-.rating > input {
+.form-group .rating > input {
   display: none;
 }
 
-.rating > label {
+.form-group .rating > label {
   cursor: pointer;
   width: 40px;
   height: 40px;
@@ -34,23 +38,23 @@
 }
 
 @media (max-width: 992px) {
-  .rating{
+  .form-group .rating{
     height: 100px;
   }
-  .rating > label {
+  .form-group .rating > label {
     width: 30px;
     height: 30px;
   }
 }
 
-.rating > input:checked ~ label,
-.rating > input:checked ~ label ~ label {
+.form-group .rating > input:checked ~ label,
+.form-group .rating > input:checked ~ label ~ label {
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
 
 }
 
-.rating > input:not(:checked) ~ label:hover,
-.rating > input:not(:checked) ~ label:hover ~ label {
+.form-group .rating > input:not(:checked) ~ label:hover,
+.form-group .rating > input:not(:checked) ~ label:hover ~ label {
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23d8b11e' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
 }
 
@@ -187,4 +191,24 @@
   #rating-10:checked ~ .emoji-wrapper > .emoji {
     transform: translateY(-300px);
   }
+}
+
+.form-control {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 992px) {
+    .form-control {
+      width: 550px;
+      font-size: 16px;
+    }
+}
+
+@media (max-width: 600px) {
+    .form-control {
+      width: 300px;
+      font-size: 14px;
+    }
 }
