Reformat intro page

--- a/templates/advanced_search.html
+++ b/templates/advanced_search.html
@@ -101,7 +101,7 @@
 
     {% for movie in movieItems %}
     <div class="movies-row">
-        <form action="{% url 'show-result' %}" method="POST" class="movie-cell poster" style="text-align: center;">
+        <form action="{% url 'result' %}" method="POST" class="movie-cell poster" style="text-align: center;">
             {% csrf_token %}
             <input type="hidden" value="{{movie.1}}" name="movie">
             <input type="image" src="{{movie.13}}" alt="movie">
