Fix error with reviews

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,8 +48,7 @@
     </svg>
 </div>
 
-<div class="app">
-
+<div class="app" id="App">
     <div class="header">
         <img class="logo-img" src="{% static 'ico/logo.png' %}" alt="logo" onclick="window.location.href='{% url "main-page" %}'"/>
         <div class="header-menu">
