--- a/templates/result.html
+++ b/templates/result.html
@@ -6,7 +6,6 @@
 {% block extrahead %}
     <link rel="stylesheet" href="{% static 'css/movie-info.css' %}">
     <link rel="stylesheet" href="{% static 'css/movie-reviews.css' %}">
-    <link rel="stylesheet" href="{% static 'css/review.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -97,10 +96,6 @@
     </div>
 </div>
 
-<div class="reviews-card" id="AddReview">
-{% include 'review.html' %}
-</div>
-
 <div class="reviews-card">
     <div class="reviews-list">
         <div class="title">"{{ movie }}" Reviews &#160;<i class="fa fa-film" aria-hidden="true" style="color: #FFBC0B"></i></div>
@@ -152,7 +147,7 @@
 <script>
 let intro = "{{ youtube }}";
 
-if (intro !== "None") {
+if (intro !== "None" && intro !== "") {
     $("#showIntro").submit();
 }
 
