--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -24,6 +24,7 @@
   --scrollbar-bg: rgb(255 253 253 / 27%);
   --img-border: rgba(16 18 27 / 40%);
   --footer-color: #f9fafb;
+  --author-color: #8bc34a;
   --select-color: #fc9803;
   --review-color: #4a90e2;
   --read-more: #ffda00;
@@ -40,6 +41,7 @@
   --scrollbar-bg: rgb(1 2 3 / 20%);
   --img-border: rgba(53 97 158 / 50%);
   --footer-color: #f7f7f7;
+  --author-color: #009688;
   --select-color: #4a90e2;
   --review-color: #fc9803;
   --read-more: #4a90e2;
