--- a/templates/my-reviews.html
+++ b/templates/my-reviews.html
@@ -35,7 +35,7 @@
                     </p>
                 </div>
 
-                <div class="card-footer border-top border-dark secondary-bg-fade robotoBold">
+                <div class="card-footer secondary-bg-fade robotoBold">
                     <span class="float-left"><i class="fa fa-star" style="color: #f3d779;"></i>&nbsp;{{ review.rating }}</span>
                     <span class="float-right">{{review.timestamp|date:"F j, Y, g:i a"}}</span>
                 </div>
