--- a/templates/base.html
+++ b/templates/base.html
@@ -52,22 +52,22 @@
     <div class="header">
         <img class="logo-img" src="{% static 'ico/logo.png' %}" alt="logo" onclick="window.location.href='{% url "main-page" %}'"/>
         <div class="header-menu">
-                <a class="menu-link" href="">Genres</a>
-                <a class="menu-link" href="">Specials</a>
+            <a class="menu-link" href="">Genres</a>
+            <a class="menu-link" href="{% url 'specials' %}">Specials</a>
             {% if user.is_authenticated %}
-                <a class="menu-link" href="{% url 'watchlist' %}">Watchlist</a>
-                <a class="menu-link" href="{% url 'my-reviews' %}">Reviews</a>
-                <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
+            <a class="menu-link" href="{% url 'watchlist' %}">Watchlist</a>
+            <a class="menu-link" href="{% url 'my-reviews' %}">Reviews</a>
+            <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
             {% else %}
-                <a class="menu-link" href="{% url 'login' %}">Log In</a>
-                <a class="menu-link" href="{% url 'register' %}">Sign Up</a>
+            <a class="menu-link" href="{% url 'login' %}">Log In</a>
+            <a class="menu-link" href="{% url 'register' %}">Sign Up</a>
             {% endif %}
         </div>
 
          <div class="header-profile">
              {% if user.is_authenticated %}
-                 {{ user.username }}
-                 <img class="profile-img" src="{{ user|gravatar:60 }}" alt="avatar"/>
+             {{ user.username }}
+             <img class="profile-img" src="{{ user|gravatar:60 }}" alt="avatar"/>
              {% endif %}
          </div>
 
