--- a/templates/specials.html
+++ b/templates/specials.html
@@ -31,13 +31,13 @@
             </div>
         </a>
         
-        <div class="special-card" id="sp-card-2">
+        <a class="special-card" id="sp-card-2" href="{% url 'netflix' %}">
             <div class="special-card-bg"></div>
             <img class="special-card-img" src="{% static 'img/netflix.png' %}" />
             <div class="special-card-text">
                 <p class="special-card-title" style="color: #e50914; text-shadow: 1px 1px 2px black;">Netflix Movies</p>
             </div>
-        </div>
+        </a>
         
         <div class="special-card" id="sp-card-3">
             <div class="special-card-bg"></div>
