--- a/templates/specials.html
+++ b/templates/specials.html
@@ -39,13 +39,13 @@
             </div>
         </a>
         
-        <div class="special-card" id="sp-card-3">
+        <a class="special-card" id="sp-card-3" href="{% url 'series' %}">
             <div class="special-card-bg"></div>
             <img class="special-card-img" src="{% static 'img/all_series.png' %}" />
             <div class="special-card-text">
                 <p class="special-card-title" style="color: #f8f9fa; text-shadow: 1px 1px 2px black;">All Series</p>
             </div>
-        </div>
+        </a>
     </div>
 {% endblock %}
 
