--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,10 @@
             {% endif %}
         </div>
 
+        <form class="search-bar" action="{% url 'movie-search' %}" method="GET">
+            <input type="text" name="q" value="" placeholder="Search" id="q" style="padding: 0 20px 0 40px; margin-top: 0; border: none;">
+        </form>
+
          <div class="header-profile">
              {% if user.is_authenticated %}
              {{ user.username }}
