Create user page

--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -1,5 +1,4 @@
 /* ==== GENERAL SETTINGS ==== */
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
 * {
@@ -101,7 +100,6 @@ h1 {
 }
 
 /* ==== DARK/LIGHT VERSION ==== */
-
 .dark-light {
   position: fixed;
   bottom: 50px;
@@ -144,7 +142,6 @@ body.light-mode:before {
 }
 
 /* ==== GENERAL APP SETTINGS ==== */
-
 .app {
   background-color: var(--theme-bg-color);
   max-width: 1250px;
@@ -162,7 +159,6 @@ body.light-mode:before {
 }
 
 /* ==== NAVBAR ==== */
-
 .header {
   display: flex;
   align-items: center;
@@ -347,7 +343,6 @@ body.light-mode:before {
 }
 
 /* ==== MAIN SETTINGS ==== */
-
 .main-container {
   display: flex;
   flex-direction: column;
@@ -626,7 +621,6 @@ body.light-mode:before {
 }
 
 /* ==== SCROLLBAR ==== */
-
 ::-webkit-scrollbar {
   width: 6px;
   border-radius: 10px;
@@ -638,7 +632,6 @@ body.light-mode:before {
 }
 
 /* ==== PRELOADER ==== */
-
 .spinner {
   --size: 120px;
 
@@ -703,5 +696,189 @@ body.light-mode:before {
   }
   100% {
     transform: rotateX(50deg) rotateY(55deg) rotateZ(360deg);
+  }
+}
+
+.modal-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 10;
+  visibility: hidden;
+  transition: background-color 250ms linear;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40%;
+  height: auto;
+  margin-top: -14%;
+  margin-left: -21%;
+  padding: 30px;
+  background-color: #1F1A36;
+  border-radius: 10px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  transform: scale(0);
+  transition: transform 250ms ease;
+  visibility: hidden;
+  z-index: 20;
+}
+
+.modal-content .close {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 11;
+  color: white;
+}
+
+.modal-content header {
+  position: relative;
+  display: block;
+}
+
+.modal-content .round {
+  margin: 0 auto;
+  width: 128px;
+  height: 128px;
+  border: 1px solid #4dccf9;
+  padding: 7px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modal-content header h2 {
+  margin: 0 0 10px;
+  padding: 15px 5px 5px;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+}
+
+.modal-content footer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 10px 0 0;
+}
+
+.modal-content footer .button {
+  position: relative;
+  padding: 10px 10px;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: 400;
+  color: white;
+  text-transform: uppercase;
+  overflow: hidden;
+}
+
+.modal-content footer .button:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: width 250ms ease;
+  z-index: 0;
+}
+
+.modal-content footer .button:hover:before {
+  width: 100%;
+}
+
+.modal-content footer .button.my-watchlist,
+.modal-content footer .button.my-reviews,
+.modal-content footer .button.sign-out {
+  text-shadow: 1px 0 0 #565454;
+  text-decoration: none;
+}
+
+.modal-content footer .button.my-watchlist {
+  margin-right: 10px;
+  background-color: #673ab7;
+  text-shadow: 1px 0 0 #565454;
+  text-decoration: none;
+}
+
+.modal-content footer .button.my-reviews {
+  margin-right: 10px;
+  background-color: #cb4269;
+}
+
+.modal-content footer .button.sign-out {
+  background-color: #2196f3;
+}
+
+#modal {
+  display: none;
+}
+
+#modal:checked ~ .modal-bg {
+  visibility: visible;
+  background-color: black;
+  opacity: 0.7;
+  transition: background-color 250ms linear;
+}
+
+#modal:checked ~ .modal-content {
+  visibility: visible;
+  transform: scale(1);
+  transition: transform 250ms ease;
+  z-index: 111;
+}
+
+label.header-profile {
+  font-size: 15px;
+  text-transform: none;
+  font-weight: 600;
+  font-family: var(--body-font);
+}
+
+@media (max-width: 900px) {
+    .modal-content footer {
+      display: grid;
+    }
+
+  .modal-content footer .button.my-watchlist,
+  .modal-content footer .button.my-reviews,
+  .modal-content footer .button.sign-out {
+    margin-bottom: 10px;
+    width: 150px;
+    text-align: center;
+  }
+
+  .modal-content {
+    width: fit-content;
+    padding-right: 50px;
+    padding-left: 50px;
+    margin-top: -25%;
+    margin-left: -15%;
+  }
+}
+
+@media (max-width: 750px) {
+  .modal-content {
+    margin-top: -35%;
+    margin-left: -20%;
+  }
+}
+
+@media (max-width: 550px) {
+  .modal-content {
+    margin-top: -40%;
+    margin-left: -30%;
   }
 }
