--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,6 +14,12 @@
             width: 450px;
         }
 
+        @media (max-width: 450px) {
+            .sign-up {
+                width: fit-content;
+            }
+        }
+
         .sign-up .container .sign-up-form .form-content .row-wrapper .username,
         .sign-up .container .sign-up-form .form-content .row-wrapper .pass1 {
             flex-basis: 400px;
