Add some extra buttons for mobile version

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,12 +115,10 @@
                     <p>{{ form.non_field_errors }}</p>
                     {% endif %}
 
-                    {% if not user.is_authenticated %}
-                    <div style="width: 100%; text-align: center;">
-                        <a class="auth-button" style="margin-right: 20px;" href="{% url 'login' %}">Log In</a>
-                        <a class="auth-button" href="{% url 'register' %}">Sign Up</a>
+                    <div id="mobBtn" style="width: 100%; text-align: center;">
+                        <a class="auth-button" style="margin-right: 20px;" href="{% url 'specials' %}">Genres</a>
+                        <a class="auth-button" href="{% url 'specials' %}">Specials</a>
                     </div>
-                    {% endif %}
 
                     {% block content %}{% endblock %}
                 </div>
