--- a/static/css/adv-search.css
+++ b/static/css/adv-search.css
@@ -222,7 +222,7 @@ input[type=submit]:active {
 @media (max-width: 992px) {
     .adv-search {
         width: 100%;
-        margin: 1rem;
+        margin: 1rem 0;
     }
 }
 
