--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -32,6 +32,7 @@
   --special-color: #332d5e75;
   --special-title: #dc3545;
   --auth-color: #4a90e2;
+  --add-btn-color: #673ab7;
 }
 
 .light-mode {
@@ -887,6 +888,7 @@ label.header-profile {
 .auth-button {
   display: inline-block;
   padding: 1.2em 2.8em;
+  margin-top: 60px;
   margin-bottom: 20px;
   align-self: center;
 
@@ -898,7 +900,7 @@ label.header-profile {
   text-align: center;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: var(--theme-color);
   background-color: transparent;
   cursor: pointer;
 
@@ -915,11 +917,39 @@ label.header-profile {
   color: #ffffff;
 }
 
+#mobBtn > .auth-button {
+  display: none;
+  margin-top: 0;
+  border-color: var(--add-btn-color);
+  box-shadow: 0 0 5px 0 var(--add-btn-color) inset, 0 0 5px 2px var(--add-btn-color);
+}
+
+#mobBtn > .auth-button:hover {
+  box-shadow: 0 0 40px 40px var(--add-btn-color) inset, 0 0 0 0 var(--add-btn-color);
+  text-decoration: none;
+  color: #ffffff;
+}
+
+@media (max-width: 650px) {
+    #mobBtn > .auth-button {
+      display: inline-block;
+    }
+}
 
 @media (max-width: 900px) {
     .auth-button {
       font-size: 16px;
       padding: 15px 20px;
       margin-bottom: 10px;
+      margin-top: 10px;
+    }
+}
+
+@media (max-width: 350px) {
+    .auth-button {
+      font-size: 14px;
+      padding: 10px 15px;
+      margin-bottom: 7px;
+      margin-top: 7px;
     }
 }
