--- a/templates/main-page.html
+++ b/templates/main-page.html
@@ -87,6 +87,13 @@
         </footer>
     </div>
 </form>
+
+{% if not user.is_authenticated %}
+<div style="width: 100%; text-align: center;">
+    <a class="auth-button" style="margin-right: 20px;" href="{% url 'login' %}">Log In</a>
+    <a class="auth-button" href="{% url 'register' %}">Sign Up</a>
+</div>
+{% endif %}
 {% endblock %}
 
 {% block extra_js %}
