--- a/templates/my-reviews.html
+++ b/templates/my-reviews.html
@@ -5,6 +5,11 @@
 
 {% block extrahead %}
 <link rel="stylesheet" href="{% static 'css/my-reviews.css' %}">
+<style>
+#mobBtn > .auth-button {
+  display: none;
+}
+</style>
 {% endblock %}
 
 {% block content %}
