--- a/templates/specials.html
+++ b/templates/specials.html
@@ -17,6 +17,10 @@
         #sp-card-3 .special-card-bg {
             background: url("{% static 'img/back-series.jpg' %}") center/cover no-repeat;
         }
+
+        #mobBtn > .auth-button {
+            display: none;
+        }
     </style>
 {% endblock %}
 
