--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -4,6 +4,11 @@
 
 {% block extrahead %}
 <link rel="stylesheet" href="{% static 'css/movies-list.css' %}">
+<style>
+#mobBtn > .auth-button {
+  display: none;
+}
+</style>
 {% endblock %}
 
 {% block content %}
