--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,11 @@
 {% block extrahead %}
     <link rel="stylesheet" href="{% static 'css/movie-info.css' %}">
     <link rel="stylesheet" href="{% static 'css/movie-reviews.css' %}">
+    <style>
+    #mobBtn > .auth-button {
+      display: none;
+    }
+    </style>
 {% endblock %}
 
 {% block content %}
