--- a/templates/genres.html
+++ b/templates/genres.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row" align="center">
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4" style="cursor: pointer;">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Comedy" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/comedy.jpg' %})"></div>
             <div class="bg-text">
@@ -26,7 +26,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Sci-Fi" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/sci-fi.jpg' %})"></div>
             <div class="bg-text">
@@ -34,7 +34,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Horror" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/horror.jpg' %})"></div>
             <div class="bg-text">
@@ -42,7 +42,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Action" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/action.jpg' %})"></div>
             <div class="bg-text">
@@ -50,7 +50,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Fantasy" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/fantasy.jpg' %})"></div>
             <div class="bg-text">
@@ -58,7 +58,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Familt" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/family.jpg' %})"></div>
             <div class="bg-text">
@@ -66,7 +66,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Thriller" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/thriller.jpg' %})"></div>
             <div class="bg-text">
@@ -74,7 +74,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Drama" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/drama.jpg' %})"></div>
             <div class="bg-text">
@@ -82,7 +82,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Mystery" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/mystery.jpg' %})"></div>
             <div class="bg-text">
@@ -90,7 +90,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Crime" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/crime.jpg' %})"></div>
             <div class="bg-text">
@@ -98,7 +98,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Adventure" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/adventure.jpg' %})"></div>
             <div class="bg-text">
@@ -106,7 +106,7 @@
             </div>
         </form>
 
-        <form action="{% url 'genres' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
+        <form action="{% url 'genre' %}" method="GET" class="genre col-xs-12 col-sm-6 col-md-4">
             <input type="hidden" value="Animation" name="typeGenre">
             <div class="bg-img" style="background-image: url({% static 'img/genres/animation.jpg' %})"></div>
             <div class="bg-text">
